<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginStart="14dp"
    android:layout_marginEnd="14dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/txt_price"
        style="@style/CoinBitText.Huge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="$40.90"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_up_down"
        style="@style/CoinBitText.Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingEnd="4dp"
        android:text="▲"
        android:textColor="@color/colorGain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_price" />


    <TextView
        android:id="@+id/txt_change1"
        style="@style/CoinBitText.BodyTertiary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingEnd="12dp"
        android:text="$0.04"
        app:layout_constraintStart_toEndOf="@+id/txt_up_down"
        app:layout_constraintTop_toBottomOf="@+id/txt_price" />

    <TextView
        android:id="@+id/txt_change2"
        style="@style/CoinBitText.Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="+8.1%"
        android:textColor="@color/tertiaryTextColor"
        app:layout_constraintStart_toEndOf="@+id/txt_change1"
        app:layout_constraintTop_toBottomOf="@+id/txt_price" />

    <com.robinhood.spark.SparkView
        android:id="@+id/sparkView"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_change1"
        app:spark_animateChanges="true"
        app:spark_lineColor="@color/colorPrimary"
        app:spark_scrubEnabled="true" />

    <TextView
        android:id="@+id/txtSparkError"
        style="@style/CoinBitText.Body1Alternate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Some Error"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/sparkView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/sparkView"
        app:layout_constraintTop_toTopOf="@+id/sparkView" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:weightSum="7"
        android:padding="8dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sparkView">

        <RadioButton
            android:id="@+id/radio_12h"
            android:gravity="center"
            android:layout_weight="1"
            android:button="@null"
            android:background="@drawable/range_radio_button_selector_background"
            android:checked="true"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:textSize="14dp"
            android:textStyle="bold"
            android:textColor="@drawable/range_radio_button_selector"
            android:text="@string/period_1h"
            android:layout_width="match_parent"
            android:layout_height="45dp"/>

        <RadioButton
            android:id="@+id/radio_1day"
            android:gravity="center"
            android:layout_weight="1"
            android:button="@null"
            android:background="@drawable/range_radio_button_selector_background"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:textSize="14dp"
            android:textStyle="bold"
            android:textColor="@drawable/range_radio_button_selector"
            android:text="@string/period_1day"
            android:layout_width="match_parent"
            android:layout_height="45dp"/>

        <RadioButton
            android:id="@+id/radio_1week"
            android:gravity="center"
            android:layout_weight="1"
            android:button="@null"
            android:background="@drawable/range_radio_button_selector_background"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:textSize="14dp"
            android:textStyle="bold"
            android:textColor="@drawable/range_radio_button_selector"
            android:text="@string/period_1week"
            android:layout_width="match_parent"
            android:layout_height="45dp"/>

        <RadioButton
            android:id="@+id/radio_1month"
            android:gravity="center"
            android:layout_weight="1"
            android:button="@null"
            android:background="@drawable/range_radio_button_selector_background"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:textSize="14dp"
            android:textStyle="bold"
            android:textColor="@drawable/range_radio_button_selector"
            android:text="@string/period_1month"
            android:layout_width="match_parent"
            android:layout_height="45dp"/>

        <RadioButton
            android:id="@+id/radio_3month"
            android:gravity="center"
            android:layout_weight="1"
            android:button="@null"
            android:background="@drawable/range_radio_button_selector_background"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:textSize="14dp"
            android:textStyle="bold"
            android:textColor="@drawable/range_radio_button_selector"
            android:text="@string/period_3month"
            android:layout_width="match_parent"
            android:layout_height="45dp"/>

        <RadioButton
            android:id="@+id/radio_1year"
            android:gravity="center"
            android:layout_weight="1"
            android:button="@null"
            android:background="@drawable/range_radio_button_selector_background"
            android:textColor="@drawable/range_radio_button_selector"
            android:text="@string/period_1year"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:textSize="14dp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="45dp"/>

        <RadioButton
            android:id="@+id/radio_all"
            android:gravity="center"
            android:layout_weight="1"
            android:button="@null"
            android:background="@drawable/range_radio_button_selector_background"
            android:textColor="@drawable/range_radio_button_selector"
            android:text="@string/period_all"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:textSize="14dp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="45dp"/>


    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>